Fixed rover and trials slectors.
